# home

./: .gitignore  About.md  Books.html  Main.hs  Makefile  README.md  cabal.project  contact.md  default.nix  flake.nix  hie.yaml  index.html  justfile  shell.nix  site.nix  website.cabal
_site/: index.html  posts.html  style.css
_site/posts/: 2020-08-28-understanding-zippers.html  2024-01-03-event-sourcing.html  2024-05-16-plugable-fretboard-system.html
_site/tags/: architecture.html  guitar.html  haskell.html
ase/: fretboard.ase
css/: base.css  extra.css  layout.css
docs/: About.html  Books.html  CNAME  index.html  posts.html  style.css
docs/posts/: 2020-08-28-understanding-zippers.html  2021-03-23-functional-language-with-template-meta-programming.html  2021-03-23-template-meta-lambda-calculus.html  2021-04-21.polymorphic-value-in-c++.html  2024-05-04-visualizing-fretboard.html  2024-05-16-visualize-fretboard.html  2024-06-04-functional-language-with-template-meta-programming.html  2024-06-05-monotonic-queue-iterator.html  2024-06-05-use-freemonad.html  2025-01-21-gnosticism.html  2025-08-21-the-prince-book-review.html  2025-09-04-immutable-data-structures-operationally.html  2025-09-04-the-history-of-the-linked-list-hate.html  2025-09-30-01-aa.html  2025-09-30-01-cgi.html  2025-10-08-how-to-solve-it-book-review.html  2025-10-21-gnosticism.html  2025-11-11-雷锋日记-读书笔记.html  2025-11-12-how-to-solve-it.html  2025-11-16-结绳记事.html  2025-12-02-quebec-in-brief-words.html  2025-12-04-callcc-in-c.html  2025-12-07-天命到底是什么.html  2025-12-16-望文生义.html  2025-12-17-意志.html  2025-12-18-animism.html  2025-12-20-short-history-of-Khazaria.html  2025-12-21-chimerica.html  2025-12-22-modernism-in-brief-words.html  2025-12-23-thomas-aquinas-in-brief-words.html  2025-12-30-八股文.html  2025-xx-xx-xx-amortised-queue-and-realtime-queue-report.html  2025-xx-xx-xx-animism.html  2025-xx-xx-xx-book-review-how-to-solve-it.html  2025-xx-xx-xx-callcc-in-c.html  2025-xx-xx-xx-chimeria.html  2025-xx-xx-xx-gnosticism.html  2025-xx-xx-xx-how-to-solve-it-book-review.html  2025-xx-xx-xx-modernism-in-brief-words.html  2025-xx-xx-xx-quebec-in-brief-words.html  (+30 more)
docs/tags/: book.html  c++.html  cn.html  code.html  culture.html  en.html  general.html  guitar.html  haskell.html  history.html  in-brief-words.html  math.html  philosophy.html  web.html
draft/: 2021-04-21.polymorphic-value-in-c++.md  2024-05-16-plugable-fretboard-system.md  2024-05-16-visualize-fretboard.md  2024-06-05-monotonic-queue-iterator.md  2024-06-05-use-freemonad.md
drafts/: 2025-09-30-01-cgi.md
images/: 2020-08-28-understanding-zippers-immutable-tree-9.png~  a.dot
posts/: 2020-08-28-understanding-zippers.md  2021-03-23-functional-language-with-template-meta-programming.md  2023-ok.md  2024-01-03-event-sourcing.md  2024-05-04-visualizing-fretboard.md  2024-05-16-plugable-caged-system.md  2024-05-16-visualize-fretboard.md  2024-06-04-functional-language-with-template-meta-programming.md  2025-01-21-gnosticism.md  2025-08-21-the-prince-book-review.md  2025-09-30-01-cgi.md  2025-10-08-how-to-solve-it-book-review.md  2025-10-21-gnosticism.md  2025-11-11-雷锋日记-读书笔记.md  2025-11-16-结绳记事.md  2025-12-02-quebec-in-brief-words.md  2025-12-04-callcc-in-c.md  2025-12-07-天命到底是什么.md  2025-12-16-望文生义.md  2025-12-17-意志.md  2025-12-18-animism.md  2025-12-20-short-history-of-Khazaria.md  2025-12-21-chimerica.md  2025-12-22-modernism-in-brief-words.md  2025-12-23-thomas-aquinas-in-brief-words.md  2025-12-30-八股文.md  2026-01-07-y-combinator-in-hasekll.md  2026-01-10-五轮书-读书笔记.md  2026-01-14-闽广滤镜.md  2026-01-15-二元论和白莲教.md  2026-01-18-calculus-in-brief-word.md  2026-01-18-cultural-assimilation.md  2026-01-19-hre-in-brief-words.md  2026-01-25-bretton-wood-to-chimerica.md  2026-01-26-曾国藩.md  2026-01-27-byzantine-in-brief-words.md  2026-01-28-丑陋的中国人-书评.md
r2book/: Main.hs
static/: index.html
static/articles/2023/: ok.md
static/css/: base.scss  fonts.scss  main.scss  reset.scss
templates/: content.html  default.html  post-list.html  post.html
website/: Config.hs  Main.hs  website.cabal
website/Page/: Home.hs
