cabal-version:      2.4
name:               website
version:            0.1.0.0
author:             Ailrk
maintainer:         jimmy@ailrk.com

extra-source-files: CHANGELOG.md


common extensions
    default-extensions:
      LambdaCase
      ImportQualifiedPost
      OverloadedStrings
      OverloadedRecordDot
      DerivingStrategies
      DuplicateRecordFields
      NoFieldSelectors
      QuasiQuotes
      StandaloneDeriving

common options
    ghc-options:
      -- force all warnings to be on and selectively disable some
      -threaded
      -Weverything
      -Wno-unticked-promoted-constructors
      -Wno-unsafe
      -Wno-missing-import-lists
      -Wno-implicit-prelude
      -Wno-missing-safe-haskell-mode
      -Wno-missing-deriving-strategies
      -Wno-missing-local-signatures
      -Wno-monomorphism-restriction
      -Wno-safe
      -Wno-all-missed-specialisations
      -Wno-missing-kind-signatures
      -Wno-ambiguous-fields
      -Wno-missing-export-lists


executable website
    import: extensions, options
    main-is: Main.hs
    hs-source-dirs: website
    build-depends:
        base >=4.16.1.0
      , pandoc
      , hakyll
      , hakyll-images
      , hakyll-sass
      , filepath
      , directory
      , text
      , time
      , bytestring
      , lucid

    default-language: Haskell2010
