cabal-version:      2.4
name:               website
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ailrk
maintainer:         jimmy123good@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


executable website
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0
      , pandoc
      , hakyll
      , hakyll-images
      , hakyll-sass
      , filepath
      , directory
      , text
      , time
      , bytestring
      , lucid

    hs-source-dirs:   .
    default-language: Haskell2010
